---------------------------------------------------------------------------------------------------
Version: 0.0.146
  Changes:
    - print name of obstruction entity for sync-area (doesn't say inside/outside)
  Scripting:
    - added "knownbugs.txt", mostly for bugs that strange edge cases I may or may not fix
---------------------------------------------------------------------------------------------------
Version: 0.0.145
Date: 07/05/2020
  Bugfixes:
    - actually fix dropped items from causing a sync error
---------------------------------------------------------------------------------------------------
Version: 0.0.144
Date: 06/05/2020
  Bugfixes:
    - prevent certain entity types from error'ing the sync area scan

---------------------------------------------------------------------------------------------------
Version: 0.0.143
Date: 06/05/2020
  Changes:
    - patches of Dimensional Fluid are "grouped" more on map (more dots will be highlighted together)
    - selecting a Deep Storage with the Matter Interactor will automatically set MI filter if DS has one
  Scripting:
    - Possible improvement to performance with large numbers of mining jets and many ore paths

---------------------------------------------------------------------------------------------------
Version: 0.0.142
Date: 03/05/2020
  Changes:
    - Erya Radar scan rate and dish rotation speed decreased
  BugFixes:
    - Fluid Interactor didn't have blueprint settings applied
    - place and remove error from not setting MF.playerIndex
---------------------------------------------------------------------------------------------------
Version: 0.0.141
Date: 01/05/2020
  Changes:
    - attempt to make sync collision detection less aggressive
  BugFixes:
    - Erya Loader 1 and Extrem can be blueprinted / copy-pasted
    - Erya Radar works now. Does a nearby scan every 5 seconds (enjoy)