@@ -809,6 +809,7 @@ JetHealth=Health
 
 ## -------------------------------------- INFORMATION ------------------------------ ##
 [info]
-MF-sync-collision=Obstruction Detected, No Sync
+MF-sync-collision-in-out=Obstructed in-to-out, No Sync
+MF-sync-collision-out-in=Obstructed out-to-in, No Sync
 MF-sync-too-close=Mobile Factorys Too Close, No Sync
 cjTooManyGhosts=Mobile Factory: Construction Table is at the limit of __1__
